--- a/shard.yml
+++ b/shard.yml
@@ -20,7 +20,7 @@ dependencies:
     branch: master
   kemal-session:
     github: kemalcr/kemal-session
-    commit: 0.10.0
+    version: 0.10.0
   kemal-csrf:
     github: kemalcr/kemal-csrf
     version: 0.5.0
